--- a/style.css
+++ b/style.css
@@ -1202,7 +1202,6 @@ body.dark-mode .mode-toggle-btn .fas.fa-sun {
 }
 
 .project-image {
-    height: 200px;
     overflow: hidden;
 }
 
@@ -1213,8 +1212,8 @@ body.dark-mode .mode-toggle-btn .fas.fa-sun {
     transition: transform 0.4s ease;
 }
 
-.project-card:hover .project-image img {
-    transform: scale(1.05);
+.project-card:hover {
+    transform: scale(1.02);
 }
 
 .project-info {
